--- a/AllergySafety-Server/package.json
+++ b/AllergySafety-Server/package.json
@@ -17,16 +17,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.5.0",
+    "express": "^4.18.2",
     "express-validator": "^7.0.0",
-    "axios": "^1.6.2"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "autoprefixer": "^10.4.22",
+    "nodemon": "^3.0.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17"
   }
 }
