--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "start:client": "cd AllergySafety-Client && npm run preview"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "autoprefixer": "^10.4.22",
+    "concurrently": "^8.2.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17"
   },
   "keywords": [
     "allergy",
