--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev:server": "npm run dev --prefix AllergySafety-Server",
     "dev:client": "npm run dev --prefix AllergySafety-Client",
     "install:all": "npm install && npm install --prefix AllergySafety-Server && npm install --prefix AllergySafety-Client",
-    "build": "concurrently \"npm run build:server\" \"npm run build:client\"",
-    "build:server": "npm run build --prefix AllergySafety-Server",
+    "build": "npm run build:client",
+    "build:server": "echo \"No build step for server\"",
     "build:client": "npm run build --prefix AllergySafety-Client",
     "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
     "start:server": "npm start --prefix AllergySafety-Server",
