--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "npm run dev --prefix AllergySafety-Server",
     "dev:client": "npm run dev --prefix AllergySafety-Client",
-    "build": "npm install --prefix AllergySafety-Client && npm run build --prefix AllergySafety-Client",
+    "build": "npm install --prefix AllergySafety-Client --include=dev && npm run build --prefix AllergySafety-Client",
     "start": "npm install --prefix AllergySafety-Server --omit=dev && node AllergySafety-Server/server.js",
     "postinstall": "npm install --prefix AllergySafety-Server && npm install --prefix AllergySafety-Client"
   },
