--- a/AllergySafety-Server/package.json
+++ b/AllergySafety-Server/package.json
@@ -24,7 +24,9 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "nodemailer": "^7.0.11",
+    "twilio": "^5.10.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
